# alaska

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Kconfig  LICENSE  Makefile  README.md  alaska-clang  default.nix  enable  flake.nix  requirements.txt  shell.nix
compiler/: CMakeLists.txt  notes.md
compiler/alaska/src/: Pass.cpp
compiler/include/: FlowForest.h  FlowForestTransformation.h  Graph.h  LockForest.h  LockForestTransformation.h  Locks.h  Utils.h  WrappedFunctions.h  config.h
compiler/include/alaska/: AccessAutomata.h  Graph.h  LatticePoint.h  Linker.h  OptimisticTypes.h  Passes.h  PlaceSafepoints.h  PointerFlowGraph.h  RewriteStatepointsForGC.h  TranslationForest.h  Translations.h  TypeInference.h  TypedPointer.h  Types.h  Utils.h  graph_lite.h
compiler/include/ct/: Configurations.hpp  LatencyDFA.hpp  LatencyTable.hpp  LoopTransform.hpp  Pass.hpp  Utils.hpp
compiler/include/noelle/core/: AllocAA.hpp  DGBase.hpp  (+23 more)
compiler/ldscripts/: alaska-aarch64.ld  alaska-x86_64.ld
compiler/lib/: AccessAutomata.cpp  FlowForest.cpp  FlowForestTransformation.cpp  Graph.cpp  LockForest.cpp  LockForestTransformation.cpp  Locks.cpp  OptimisticTypes.cpp  PointerFlowGraph.cpp  PointerForest.cpp  TranslationForest.cpp  Translations.cpp  TypeContext.cpp  TypedPointer.cpp  Types.cpp  Utils.cpp
compiler/lib/compat/: Linker.cpp
compiler/lib/ct/: Configurations.cpp  LatencyDFA.cpp  LoopTransform.cpp  Utils.cpp
compiler/lib/noelle/: AllocAA.cpp  BitMatrix.cpp  CallGraph.cpp  CallGraphEdge.cpp  CallGraphNode.cpp  CallGraphTraits.cpp  DataFlowAnalysis.cpp  DataFlowEngine.cpp  DataFlowResult.cpp  IntegrationWithSVF.cpp  MemorySite.cpp  MetadataEntry.cpp  MetadataManager_Instruction.cpp  MetadataManager_Module.cpp  PDG.cpp  PDGAnalysis.cpp  PDGAnalysis_callGraph.cpp  PDGAnalysis_controlDependences.cpp  PDGAnalysis_embedder.cpp  PDGAnalysis_memory.cpp  PDGPrinter.cpp  README.md  SCC.cpp  SCCCAG.cpp  SCCCAGNode.cpp  SCCCAGNode_Function.cpp  SCCCAGNode_SCC.cpp  SCCDAG.cpp  Utils.cpp
compiler/passes/: Alaska.cpp  ArgLockElision.cpp  ArgPinElision.cpp  ArgumentTrace.cpp  Combined.cpp  CompilerTiming.cpp  Escape.cpp  EscapeHandlerPass.cpp  LinkLibrary.cpp  LockInsertion.cpp  LockPrinter.cpp  LockTracker.cpp  Lower.cpp  Normalize.cpp  PinPass.cpp  PinTracking.cpp  PlaceSafepoints.cpp  RedundantArgumentLockElision.cpp  Replacement.cpp  ReplacementPass.cpp  RewriteStatepointsForGC.cpp  Translate.cpp  TranslatePass.cpp  TranslationPrinter.cpp
compiler/passes/old/: NormalizePass.cpp  TranslatePass.cpp
runtime/: CMakeLists.txt  README.md
runtime/core/: HandleTable.cpp  Heap.cpp  HeapPage.cpp  HugeObjectAllocator.cpp  LocalityPage.cpp  Localizer.cpp  Logger.cpp  Runtime.cpp  SizeClass.cpp  SizedPage.cpp  ThreadCache.cpp  Utils.cpp  barrier.cpp  compat.c  core.cpp  glue.cpp  halloc.cpp  liballoc.c  runtime.cpp  service.cpp  table.cpp  tracing.c  tracing.cpp  translate.cpp
runtime/emu/: CMakeLists.txt  uc.c
runtime/emu/include/: uc_priv.h
runtime/extra/: htlb.c  lifetime.c  rsstracker.c
runtime/include/: alaska.h  alaska.hpp  classes.inc  heaplayers.h
runtime/include/alaska/: Arena.hpp  BarrierManager.hpp  Configuration.hpp  HandleTable.hpp  Heap.hpp  HeapPage.hpp  HugeObjectAllocator.hpp  LocalityPage.hpp  Localizer.hpp  Logger.hpp  Magazine.hpp  ObjectAllocator.hpp  ObjectReference.hpp  OwnedBy.hpp  RateCounter.hpp  Runtime.hpp  ShardedFreeList.hpp  ShuffleAllocator.hpp  SizeClass.hpp  SizedAllocator.hpp  SizedPage.hpp  StackMapParser.h  ThreadCache.hpp  ThreadRegistry.hpp  VariablePage.hpp  alaska.hpp  barrier.hpp  config.h  histogram.h  internal.h  lib.hpp  liballoc.h  list_head.h  rbtree.h  rt.hpp  service.h  service.hpp  table.hpp  thread_tracking.in.hpp  trace.h  (+5 more)
runtime/include/anchorage/: Anchorage.hpp  Arena.hpp  Bitmap.hpp  Block.hpp  Chunk.hpp  Defragmenter.hpp  FreeList.hpp  Heap.hpp  LinkedList.h  LocalityFactory.hpp  MainHeap.hpp  SizeMap.hpp  Space.hpp  SubHeap.hpp  Swapper.hpp  crc32.h
runtime/include/ck/: box.h  func.h  lock.h  map.h  new.h  option.h  pair.h  queue.h  set.h  single_list.h  stack.h  string.h  template_lib.h  utility.h  vec.h
runtime/include/jemalloc/: jemalloc.h  jemalloc_macros.h  jemalloc_mangle.h  jemalloc_mangle_jet.h  jemalloc_rename.h
runtime/include/sim/: trace.h
runtime/include/yukon/: yukon.hpp
runtime/jemalloc/: jemalloc.c  prof.c
runtime/lib/: barrier.c  barrier.cpp  bootstrap.c  classification.c  compat.c  emulator.c  glue.cpp  halloc.c  halloc.cpp  lock.c  prefetch.c  prefetch.cpp  rbtree.c  runtime.c  runtime.cpp  sim.c  table.c  table.cpp  trace.c  translate.c  translate.cpp  vec.c
runtime/lib/jemalloc/: prof.c
runtime/rt/: barrier.cpp  compat.c  halloc.cpp  init.cpp  sim.cpp  threads.cpp
runtime/services/anchorage/: Anchorage.cpp  Block.cpp  Chunk.cpp  Defragmenter.cpp  LocalityFactory.cpp  README.md  Space.cpp  SubHeap.cpp  Swapper.cpp  allocator.cpp  allocator.h  anchorage.c  anchorage.cpp  internal.h  miniz.c
runtime/services/jemalloc/: service.cpp
runtime/services/none/: none.c  none.cpp
runtime/sim/: HTLB.cpp  README.md  StatisticsManager.cpp  TLB.cpp
runtime/src/: Arena.cpp  alaska.c  barrier.c  classify.c  compat.c  emulator.c  fallback.c  fallback.cpp  glue.cpp  halloc.c  lock.c  rbtree.c  runtime.c  runtime.cpp  sim.c  table.c  trace.c  translate.c  translate.cpp
runtime/src/jemalloc/: jemalloc.c
runtime/src/personality/: anchorage.c  none.c
runtime/stub/: dtoa.c  memcpy.c  net.c  obstack.c  obstack.h  stub.c
runtime/test/: halloc_test.cpp  handle_ptr_test.cpp  heap_test.cpp  htlb_sim_test.cpp  hugeobject_test.cpp  locality_page_test.cpp  magazine_test.cpp  object_allocator_test.cpp  pagemanager_test.cpp  runtime_test.cpp  sizeclass_test.cpp  sizedalloc_test.cpp  table_test.cpp  threadcache_test.cpp
runtime/test/graph/: generator.h  graph.h  platform_atomics.h  pvector.h  timer.h  util.h
runtime/unicorn/: CMakeLists.txt  uc.c
runtime/yukon/: yukon.cpp
src/rt/: CMakeLists.txt  alaska.c  set.c  translate.c
src/rt/include/: alaska.h
src/rt/jemalloc/: jemalloc.c
(+237 files in other folders)
